docs: fix color contrast to improve DX (#2188)

--- a/docs/src/less/index.less
+++ b/docs/src/less/index.less
@@ -37,7 +37,7 @@ main > div > h3 {
 }
 
 div.highlight {
-    background-color: #eee;
+    background-color: var(--color-background-tertiary);
     padding: var(--spacing-200);
 }
 
@@ -461,11 +461,16 @@ span.icon {
 }
 
 .eek-table th {
-    background-color: var(--color-neutral-2);
+    background-color: var(--color-background-tertiary);
 }
 
 .eek-table td {
     border-bottom: 1px solid #eee;
+}
+
+.eek__rating-range {
+    background-color: var(--color-background-primary);
+    color: var(--color-foreground-primary)
 }
 
 /* stylelint-enable no-descending-specificity */
